// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands login() login fail 1`] = `
"login failed
"
`;

exports[`Commands login() login success 1`] = `
"OK
"
`;

exports[`Commands logout() logout 1`] = `
"login session aborted.
"
`;

exports[`Commands session() logged-in 1`] = `
"check login status...
OK
"
`;

exports[`Commands session() not logged-in 1`] = `
"check login status...
not login
"
`;
